--- a/index.html
+++ b/index.html
@@ -12,19 +12,34 @@
 			background: url('bgg.png');
 		}
 
+		h1 {
+			font-family: 'Ubuntu', sans-serif;
+			padding: 0px;
+			margin: 0px;
+			margin-bottom: 20px;
+			margin-left: 15px;
+		}
+
+		h1 hr {
+			width: 240px;
+			float: left;
+			margin-top: 0px;
+		}
+
 		.header {
 			text-align: center;
 			width: 100%;
 			max-width: 900px;
 			margin: 0 auto;
+			padding-bottom: 100px;
 		}
 
 		.footer {
 			text-align: center;
-			max-width: 900px;
+			background: #282828;
 			margin: 0 auto;
 			display: block;
-			padding-bottom: 30px;
+			padding: 50px;
 		}
 
 		ul {
@@ -42,16 +57,16 @@
 		li a {
 		  display: block;
 		  padding: 8px 14px;
-		  border:2px solid #a34d10;
+		  border:1px solid #fff;
 		  /*
 		  font-family: 'Baloo 2', cursive;
 		  font-family: 'Roboto', sans-serif;
 		  font-family: 'Montserrat', sans-serif;
 		  */
 		  font-family: 'Ubuntu', sans-serif;
-		  font-size: 22px;
+		  font-size: 20px;
 		  text-decoration: none;
-		  color: #000;
+		  color: #fff;
 		  z-index: 1;
 		  position: relative;
 		}
@@ -60,6 +75,11 @@
 			text-align: center;
 			margin-bottom: 20px;
 			margin-top: 20px;
+			position: absolute;
+			width: 100%;
+			background: #383331;
+			left: 0px;
+			padding: 5px;
 		}
 
 		.content {
@@ -67,7 +87,6 @@
 			margin: 0 auto;
 			display: block;
 			padding-bottom: 30px;
-			text-align: center;
 		}
 
 		.heder-logo {
@@ -75,7 +94,8 @@
 			max-width: 100%;
 			max-height: 100%;
 			margin: 0 auto;
-			padding: 20px 0px;
+			padding: 0px;
+			padding-top: 20px;
 		}
 
 		@media all and (min-width: 900px) {
@@ -90,10 +110,6 @@
 
 		.footer-logo {
 			display: block;
-			background: #ffffff;
-			width: 300px;
-			height: 180px;
-			float: right;
 		}
 
 		.menu-gb {
@@ -133,6 +149,23 @@
 			float: right;
 			margin-top: -22px;
 		}
+
+		.h1-img {
+			max-width: 80px;
+			float: left;
+		}
+
+		.h1-hr-top {
+			width: 120px;
+			position: absolute;
+			margin-top: -20px;
+		}
+
+		.h1-hr-bot {
+			width: 60px;
+			position: absolute;
+			margin-top: -30px;
+		}
 	</style>
 </head>
 <body>
@@ -156,13 +189,14 @@
 	
 </div>
 <div class="content">
-	
+	<h1>Home</h1>
+	<hr class="h1-hr-top"><br><hr class="h1-hr-bot">
 
 	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/842499478&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/priceofdarhythm" title="Ціна Ритму" target="_blank" style="color: #cccccc; text-decoration: none;">Ціна Ритму</a> · <a href="https://soundcloud.com/priceofdarhythm/gonya-dovgiy-pes-bronepozd" title="Гоня &amp; Довгий Пес - Бронепоїзд" target="_blank" style="color: #cccccc; text-decoration: none;">Гоня &amp; Довгий Пес - Бронепоїзд</a></div>
 	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/739894924&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/pvnch_official" title="PVNCH" target="_blank" style="color: #cccccc; text-decoration: none;">PVNCH</a> · <a href="https://soundcloud.com/pvnch_official/01-1" title="01. ЦЕ ПІВНІЧ" target="_blank" style="color: #cccccc; text-decoration: none;">01. ЦЕ ПІВНІЧ</a></div>
 </div>
 <div class="footer">
-	<!-- <div class="footer-logo"><img src="./logo9ch.png" height="90"></div> -->
+	<div class="footer-logo"><img class="heder-logo-img" src="l02.png" height="70"></div>
 </div>
 </body>
 </html>
