--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 			margin-left: 15px;
 		}
 
+		h1 img {
+			margin: 0px 10px;
+		}
+
 		h1 hr {
 			width: 240px;
 			float: left;
@@ -31,7 +35,7 @@
 			width: 100%;
 			max-width: 900px;
 			margin: 0 auto;
-			padding-bottom: 100px;
+			padding-bottom: 0px;
 		}
 
 		.footer {
@@ -57,7 +61,7 @@
 		li a {
 		  display: block;
 		  padding: 8px 14px;
-		  border:1px solid #fff;
+		  padding-bottom: 18px;
 		  /*
 		  font-family: 'Baloo 2', cursive;
 		  font-family: 'Roboto', sans-serif;
@@ -66,20 +70,16 @@
 		  font-family: 'Ubuntu', sans-serif;
 		  font-size: 20px;
 		  text-decoration: none;
-		  color: #fff;
+		  color: #000;
 		  z-index: 1;
 		  position: relative;
+		  background: url('ugb.png') no-repeat;
+		  background-position: bottom center;
 		}
 
 		nav {
 			text-align: center;
-			margin-bottom: 20px;
-			margin-top: 20px;
-			position: absolute;
-			width: 100%;
-			background: #383331;
-			left: 0px;
-			padding: 5px;
+			
 		}
 
 		.content {
@@ -164,7 +164,15 @@
 		.h1-hr-bot {
 			width: 60px;
 			position: absolute;
-			margin-top: -30px;
+			margin-top: -35px;
+		}
+
+		.nav-bg {
+			width: 100%;
+			background: #5b3b2f;
+			left: 0px;
+			padding: 5px;
+			margin-top: 50px;
 		}
 	</style>
 </head>
@@ -189,8 +197,7 @@
 	
 </div>
 <div class="content">
-	<h1>Home</h1>
-	<hr class="h1-hr-top"><br><hr class="h1-hr-bot">
+	<h1><img src="h1img.png">Home<img src="h1img.png"></h1>
 
 	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/842499478&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/priceofdarhythm" title="Ціна Ритму" target="_blank" style="color: #cccccc; text-decoration: none;">Ціна Ритму</a> · <a href="https://soundcloud.com/priceofdarhythm/gonya-dovgiy-pes-bronepozd" title="Гоня &amp; Довгий Пес - Бронепоїзд" target="_blank" style="color: #cccccc; text-decoration: none;">Гоня &amp; Довгий Пес - Бронепоїзд</a></div>
 	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/739894924&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/pvnch_official" title="PVNCH" target="_blank" style="color: #cccccc; text-decoration: none;">PVNCH</a> · <a href="https://soundcloud.com/pvnch_official/01-1" title="01. ЦЕ ПІВНІЧ" target="_blank" style="color: #cccccc; text-decoration: none;">01. ЦЕ ПІВНІЧ</a></div>
