--- a/about.html
+++ b/about.html
@@ -223,10 +223,12 @@
 	
 </div>
 <div class="content">
-	<h1><img src="h1img2.png">Home</h1>
-<hr>
-	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/842499478&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/priceofdarhythm" title="Ціна Ритму" target="_blank" style="color: #cccccc; text-decoration: none;">Ціна Ритму</a> · <a href="https://soundcloud.com/priceofdarhythm/gonya-dovgiy-pes-bronepozd" title="Гоня &amp; Довгий Пес - Бронепоїзд" target="_blank" style="color: #cccccc; text-decoration: none;">Гоня &amp; Довгий Пес - Бронепоїзд</a></div>
-	<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/739894924&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/pvnch_official" title="PVNCH" target="_blank" style="color: #cccccc; text-decoration: none;">PVNCH</a> · <a href="https://soundcloud.com/pvnch_official/01-1" title="01. ЦЕ ПІВНІЧ" target="_blank" style="color: #cccccc; text-decoration: none;">01. ЦЕ ПІВНІЧ</a></div>
+	<h1><img src="h1img2.png">About</h1>
+	<hr>
+	<ol>
+		<li>1) <img class="heder-logo-img" src="./v1.png"></li>
+		<li>2) <img class="heder-logo-img" src="./v2.png"></li>
+	</ol>
 </div>
 <div class="footer-shadow">
 </div>
