--- a/about.html
+++ b/about.html
@@ -73,25 +73,7 @@
 
 		li {
 		  display: inline-block;
-		  margin: 5px;
-		}
-
-		li a {
-		  display: block;
-		  padding-bottom: 18px;
-		  /*
-		  font-family: 'Baloo 2', cursive;
-		  font-family: 'Roboto', sans-serif;
-		  font-family: 'Montserrat', sans-serif;
-		  */
-		  font-family: 'Ubuntu', sans-serif;
-		  font-weight: 400;
-		  text-decoration: none;
-		  color: #000;
-		  z-index: 1;
-		  position: relative;
-		  background: url('ugb.png') no-repeat;
-		  background-position: bottom center;
+		  margin: 5px 2px;
 		}
 
 		nav {
@@ -126,6 +108,22 @@
 		li a {
 			font-size: 16px;
 			padding: 14px 8px;
+			display: block;
+			  padding: 14px 8px;
+			  /*
+			  font-family: 'Baloo 2', cursive;
+			  font-family: 'Roboto', sans-serif;
+			  font-family: 'Montserrat', sans-serif;
+			  */
+			  font-family: 'Ubuntu', sans-serif;
+			  font-weight: 400;
+			  text-decoration: none;
+			  color: #000;
+			  z-index: 1;
+			  position: relative;
+			  background: url('ugb3.png') no-repeat;
+			  background-position: top center;
+			  min-width: 59px;
 		}
 
 		.footer-shadow {
@@ -145,6 +143,9 @@
 			li a {
 				font-size: 20px;
 				padding: 16px 14px;
+		  		background: url('ugb3.png') no-repeat;
+		  		background-position: top center;
+		  		min-width: 59px;
 			}
 
 			h1 {
@@ -169,6 +170,11 @@
 
 			.footer {
 				margin-top: -174px;
+			}
+
+			li {
+			  display: inline-block;
+			  margin: 5px;
 			}
 		}
 
